[project]
name = "competitive-programing"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mei", email = "mei28aquarius@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.10.1",
    "ruff>=0.1.4",
    "isort>=5.12.0",
    "ipdb>=0.13.13",
]

[tool.hatch.metadata]
allow-direct-references = true
