[project]
name = "competitive-programing"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mei", email = "mei28aquarius@gmail.com" }
]
dependencies = [
    "numpy>=2.1.1",
    "lightgbm>=4.3.0",
    "online-judge-tools>=11.5.1",
    "sympy>=1.13.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
